Sun Mar  6 11:49:38 CET 2005 Daniel Veillard <veillard@redhat.com>

	* po/POTFILES.in: added admin-tool/aboutdialog.py to avoid automated
	  mail stating it is missing.

2005-03-04  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/editorwindow.py: convert to using
	gtk.UIManager.
	
	* admin-tool/sabayon.glade: remove the editor
	window.

2005-03-03  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/Makefile.am: add saveconfirm.py

	* admin-tool/saveconfirm.py: HIG save confirmation
	dialog. Mostly copied from GEdit.
	
	* admin-tool/editorwindow.py: hook up the save
	confirmation dialog.

2005-03-03  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.glade: add a "Delete" menu item.
	
	* admin-tool/editorwindow.py:
	(ProfileModel.reload): implement reloading the model.
	(ProfileEditorWindow.__handle_key_press),
	(ProfileEditorWindow.__handle_delete): hook up the
	delete key and menu item.
	
	* admin-tool/profilesdialog.py:
	(ProfilesDialog.__handle_key_press): hook up the
	delete key.

2005-03-03  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.glade: add a "Clear History"
	menu item.
	
	* admin-tool/editorwindow.py: hook up "Clear History"
	and "Save".
	
	* lib/storage.py:
	(ProfileStorage.clear_revisions): implement clear
	revision history.
	(run_unit_tests): add tests for clearing revision
	history.

2005-03-02  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/editorwindow.py: add a silly little
	placeholder viewer for the contents of the profile.
	Lots more work to be done here.
	
	* admin-tool/profilesdialog.py: add a "Properties"
	button and hook up the editor window.
	
	* admin-tool/sabayon.glade: add the properties button
	and the editor window.
	
	* admin-tool/Makefile.am: add editorwindow.py

2005-03-02  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/monitorwindow.py: move about dialog
	stuff to
	
	* admin-tool/aboutdialog.py: here.
	
	* admin-tool/Makefile.am: add aboutdialog.py
