@@ -1,22 +1,22 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
+admin-tool/aboutdialog.py
 admin-tool/editorwindow.py
 admin-tool/monitorwindow.py
 admin-tool/profilesdialog.py
-admin-tool/saveconfirm.py
-admin-tool/sabayon.desktop.in
-admin-tool/sabayon.glade
-admin-tool/sabayon.py
 admin-tool/sabayon-apply.py
 admin-tool/sabayon-monitor.py
 admin-tool/sabayon-session.py
-admin-tool/aboutdialog.py
+admin-tool/sabayon.desktop.in
+admin-tool/sabayon.glade
+admin-tool/sabayon.py
+admin-tool/saveconfirm.py
 lib/dirmonitor.py
 lib/protosession.py
-lib/storage.py
-lib/unittests.py
-lib/util.py
 lib/sources/filessource.py
 lib/sources/gconfsource.py
 lib/sources/mozillasource.py
 lib/sources/paneldelegate.py
+lib/storage.py
+lib/unittests.py
+lib/util.py
